05-es-account-kafka/deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account
  labels:
    app: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: account
          image: kyoungduk/account:1.0.0
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          volumeMounts:
            - name: tz-config
              mountPath: /etc/localtime
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Seoul
  strategy:
    type: RollingUpdate
