05-es-account-kafka/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: account
  labels:
    app: account
  annotations:
    prometheus.io/path: /actuator/prometheus
    prometheus.io/port: "8090"
    prometheus.io/scrape: "true"
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: account
  type: ClusterIP
